<resources>
    <string name="app_name">Location Tracker</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="source_gps">GPS</string>
    <string name="source_network">Mobile network</string>
    <string name="source_passive">Passive source</string>
    <string name="source_unknown">Unknown source</string>
    <string name="unit_min">min</string>
    <string name="unit_hour">h</string>
    <string name="unit_m">m</string>
    <string name="unit_km">km</string>
    <string-array name="units_time">
        <item>@string/unit_min</item>
        <item>@string/unit_hour</item>
    </string-array>
    <string-array name="units_distance">
        <item>@string/unit_m</item>
        <item>@string/unit_km</item>
    </string-array>
    <string name="menu_status">Status: %1$s</string>
    <string name="menu_status_enabled">Enabled</string>
    <string name="menu_status_available">Available</string>
    <string name="menu_status_finding">Finding</string>
    <string name="menu_status_device_found">Device found</string>
    <string name="menu_status_not_available">Not available</string>
    <string name="menu_status_disabled">Disabled</string>
    <string name="menu_notice_permission_location">Missing GPS permission</string>
    <string name="menu_notice_permission_sms">Missing SMS permission</string>
    <string name="menu_notice_permission_grant">Grant</string>
    <string name="menu_sms_description">Configure data in messages</string>
    <string name="screen_main">Home</string>
    <string name="screen_main_short">@string/screen_main</string>
    <string name="screen_tracking">Location tracking</string>
    <string name="screen_tracking_short">Tracking</string>
    <string name="screen_sms">SMS configuration</string>
    <string name="screen_sms_short">SMS</string>
    <string name="screen_find">Find other device</string>
    <string name="screen_find_short">Localize</string>
    <string name="screen_settings">Settings</string>
    <string name="screen_help">Help</string>
    <string name="screen_about_app">About app</string>
    <string name="screen_licenses">Open-source licenses</string>
    <string name="tracking_radius">Area radius:</string>
    <string name="tracking_phone">Alarm phone number:</string>
    <string name="tracking_continuous">Track continuously</string>
    <string name="tracking_false_alarm_reduction">Reduce false alarms</string>
    <string name="tracking_low_battery_notification">Notify when battery is low</string>
    <string name="tracking_low_battery_auto_off">Turn tracking off when battery is low</string>
    <string name="tracking_charger_detect">Notify when charger is disconnected</string>
    <string name="tracking_start">Start tracking</string>
    <string name="tracking_stop">Stop tracking</string>
    <string name="tracking_error_permissions_denied">Please enable permissions needed to enable location tracking</string>
    <string name="tracking_error_not_available">Location services are not available</string>
    <string name="tracking_error_radius">Allowed radius: %1$d - %2$d m</string>
    <string name="tracking_error_data">Check input datar</string>
    <string name="tracking_error_location_outside">Your location is outside of tracking radius!</string>
    <string name="tracking_error_location_unknown">Your location is currently unknown!</string>
    <string name="find_phone">Target phone number:</string>
    <string name="find_password">Target SMS password:</string>
    <string name="find_btn_start">Find device</string>
    <string name="find_btn_stop">Stop finding</string>
    <string name="find_device_found">Device found!</string>
    <string name="find_device_not_found">Device was not found</string>
    <string name="find_error_permissions_denied">Please enable permissions needed to find device</string>
    <string name="sms_commands_list">SMS commands list</string>
    <string name="sms_example">Alarm message example</string>
    <string name="sms_config_description">Info included in alarms:</string>
    <string name="sms_config_coords">GPS coordinates</string>
    <string name="sms_config_accuracy">Location accuracy</string>
    <string name="sms_config_time">Location time</string>
    <string name="sms_config_source">Location source</string>
    <string name="sms_config_wifi">WiFi name</string>
    <string name="sms_config_ip">IP address</string>
    <string name="sms_config_loc_name">Location name</string>
    <string name="sms_config_battery">Battery status</string>
    <string name="sms_example_lat">41.866156</string>
    <string name="sms_example_lon">-87.608343</string>
    <string name="sms_example_location_name">507 East Solidarity Drive, Chicago, IL</string>
    <string name="sms_example_ip">172.217.23.238</string>
    <string name="sms_description_password">&lt;SMS password&gt;</string>
    <string name="sms_description_find">Use this command, when you want to get position of target device, which has this application installed. Response will come within few minutes.</string>
    <string name="sms_description_gps">This command will return just GPS coordinates (and time of location fix) of target device, in format &lt;latitude&gt; &lt;longitude&gt;;&lt;time of location&gt;</string>
    <string name="sms_description_battery">Command that should be used if you want to get info about current battery percentage.</string>
    <string name="channel_tracking_name">Location tracking</string>
    <string name="channel_tracking_description">Information about location tracking</string>
    <string name="notification_tracking_content">Location tracking is running!</string>
    <string name="notification_location_fetching">Finding location</string>
    <string name="notification_location_fetching_content">Getting device location</string>
    <string name="notification_finding">Finding device</string>
    <string name="notification_finding_content">Waiting for location response from target device</string>
    <string name="sms_alarm">Your device is outside of defined location!</string>
    <string name="sms_response_name_unknown">Unknown location name</string>
    <string name="sms_response_accuracy_unknown">Unknown accuracy</string>
    <string name="sms_response_src_unknown">Unknown location source</string>
    <string name="sms_response_battery_unknown">Unknown battery level</string>
    <string name="sms_response_latitude_north">N</string>
    <string name="sms_response_latitude_south">S</string>
    <string name="sms_response_longitude_east">E</string>
    <string name="sms_response_longitude_west">W</string>
    <string name="sms_response_wifi_unknown">Unknown WiFi</string>
    <string name="sms_response_wifi_off">WiFi off</string>
    <string name="sms_response_wifi_disconnected">WiFi disconnected</string>
    <string name="sms_response_ip_unknown">Unknown IP address</string>
    <string name="sms_response_error_no_location">Unable to find device location</string>
    <string name="sms_tracking_battery_off">Device battery is low, turning off location tracking</string>
    <string name="sms_tracking_battery_low">Device battery is low</string>
    <string name="sms_tracking_charger_connected">Charger was connected</string>
    <string name="sms_tracking_charger_disconnected">Charger was disconnected</string>
    <string name="sms_response_gps_format">%1$s%2$s %3$s%4$s</string>
    <string name="sms_response_location_format">%1$s, %2$s</string>
    <string name="sms_response_location_short_format">%1$s</string>
    <string name="sms_response_battery_format">Battery: %1$d%%</string>
    <string name="sms_response_start">Command accepted, waiting for location.</string>
    <string name="sms_response_pending">There is already pending request. Try again later.</string>
    <string name="settings_general">General settings</string>
    <string name="settings_use_gps">Enable GPS</string>
    <string name="settings_use_gps_description_on">Using GPS as location source</string>
    <string name="settings_use_gps_description_off">Using mobile network for location</string>
    <string name="settings_sms_password">SMS password</string>
    <string name="settings_sms_password_format">Current SMS password: %1$s</string>
    <string name="help_menu_intro">This application can be used to track location of this device, or you can find other devices running this app.</string>
    <string name="help_menu_tracking_caption">@string/screen_tracking</string>
    <string name="help_menu_tracking">This section contains configuration of automatic location tracking (geofencing). When description in the menu says it is not available, you have probably turned off location settings or GPS signal is currently unavailable.</string>
    <string name="help_menu_find_caption">@string/screen_find</string>
    <string name="help_menu_find">Use this option if you want to find other device that is running this app.</string>
    <string name="help_menu_sms_caption">@string/screen_sms</string>
    <string name="help_menu_sms">Configuration of data included in location messages can be found in this section. It also contains list of all available SMS commands.</string>
    <string name="help_tracking_intro">You can configure geofencing in this section. That means you will receive SMS alert when this device moves away from current location.</string>
    <string name="help_tracking_map_caption">Map</string>
    <string name="help_tracking_map">Blue dot on the map shows your location. If your location is currently unknown, it won\'t be shown. Red marker is center of area represented by orange circle. When device moves outside the circle, alarm will be triggered and you will receive alert message. You can move the area by long press on the map.</string>
    <string name="help_tracking_radius_caption">Area radius</string>
    <string name="help_tracking_radius">Radius of tracking area. When you increase this value, alarm will be triggered after bigger device movement. Lower values can lead to false alarms when accuracy of location is low.</string>
    <string name="help_tracking_phone_caption">Phone number</string>
    <string name="help_tracking_phone">Enter phone number that will receive alert messages, for example when device leaves tracking area.</string>
    <string name="help_tracking_false_alarms_caption">@string/tracking_false_alarm_reduction</string>
    <string name="help_tracking_false_alarms">When enabled, alert won\'t be sent when distance between device and tracking area is smaller than location accuracy.</string>
    <string name="help_tracking_notify_battery_caption">@string/tracking_low_battery_notification</string>
    <string name="help_tracking_notify_battery">Send SMS notification to given number when battery of this device is almost empty.</string>
    <string name="help_tracking_battery_auto_off_caption">@string/tracking_low_battery_auto_off</string>
    <string name="help_tracking_battery_auto_off">Location tracking will be automatically turned off on low battery. Device will still respond to incoming SMS commands.</string>
    <string name="help_tracking_charger_caption">@string/tracking_charger_detect</string>
    <string name="about_app_author">Ondřej John, 2018</string>
    <string name="about_app_icon_credits">Icon made by Freepik from <a href="https://www.flaticon.com">www.flaticon.com</a></string>
    <string name="about_app_description">Application is published under <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache 2.0 License</a>. Source code is available on <a href="https://github.com/ondrej-john/location-tracker">GitHub</a>.</string>
    <string name="accessibility_menu_control">Control item icon</string>
    <string name="accessibility_menu_control_status">Status icon</string>
    <string name="accessibility_message_icon">Message icon</string>
    <string name="accesibility_app_icon">Application icon</string>
</resources>