<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/screen_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help"
        android:title="@string/screen_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_licenses"
        android:title="@string/screen_licenses"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about_app"
        android:icon="@drawable/ic_info"
        android:title="@string/screen_about_app"
        app:showAsAction="never" />
</menu>
