<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtSmsPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/small_gap"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            tools:text="@string/settings_sms_password_format" />

        <TextView
            android:id="@+id/txtExampleDescription"
            style="@style/DescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/small_gap"
            android:text="@string/sms_example" />

        <FrameLayout
            android:layout_width="@dimen/sms_message_width"
            android:layout_height="@dimen/sms_message_height"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/imgMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/accessibility_message_icon"
                android:scaleType="fitXY"
                android:src="@drawable/ic_message_bubble"
                android:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/txtExample"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/sms_message_padding_text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="50.128N;14.04E;Doksy;18.3.2018 18:10;accuracy 120m;GPS location;battery 84%;WiFi off;no WiFi nearby" />

        </FrameLayout>

        <TextView
            android:id="@+id/txtDescription"
            style="@style/DescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_gap"
            android:layout_marginStart="@dimen/small_gap"
            android:text="@string/sms_config_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="@dimen/small_gap"
                android:paddingStart="@dimen/small_gap">

                <CheckBox
                    android:id="@+id/checkGpsCoords"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sms_data_checkbox_height"
                    android:layout_marginTop="@dimen/medium_gap"
                    android:checked="true"
                    android:enabled="false"
                    android:text="@string/sms_config_coords" />

                <CheckBox
                    android:id="@+id/checkTime"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sms_data_checkbox_height"
                    android:text="@string/sms_config_time" />

                <CheckBox
                    android:id="@+id/checkSource"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sms_data_checkbox_height"
                    android:text="@string/sms_config_source" />

                <CheckBox
                    android:id="@+id/checkWifi"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sms_data_checkbox_height"
                    android:text="@string/sms_config_wifi" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sms_data_checkbox_height"
                    android:layout_marginTop="@dimen/medium_gap"
                    android:text="@string/sms_config_loc_name" />

                <CheckBox
                    android:id="@+id/checkAccuracy"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sms_data_checkbox_height"
                    android:text="@string/sms_config_accuracy" />

                <CheckBox
                    android:id="@+id/checkBattery"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sms_data_checkbox_height"
                    android:text="@string/sms_config_battery" />

                <CheckBox
                    android:id="@+id/checkIpAddress"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sms_data_checkbox_height"
                    android:text="@string/sms_config_ip" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txtCommandsList"
            style="@style/DescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/small_gap"
            android:text="@string/sms_commands_list" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/listCommands"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_gap" />

    </LinearLayout>

</ScrollView>
